# snower

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
doc/: api.md  architecture.md  bidding.md  consensus.md  data-model.md  decisions.md  edit.md  features.md  identity.md  overview.md  setup.md  shortcuts.md  testing.md  ui.md
snow/: __init__.py  cli.py  git_utils.py  researcher_log.py  user_config.py
snow/api/: app.py  state.py
snow/api/routers/: bidding.py  decisions.py  downloads.py  git_user.py  orphans.py  project.py  recent_projects.py  sets.py  snowballing.py  works.py  workspace.py
snow/domain/: bidding.py  identity.py  models.py
snow/providers/: base.py  factory.py  openalex_provider.py  scholarly_provider.py  semantic_scholar_provider.py
snow/storage/: bib.py  repo.py  tabular.py  yml.py
tests/: test_cli.py  test_user_config.py
tests/api/: conftest.py  test_bidding_router.py  test_decisions.py  test_project.py  test_sets.py  test_works_bibtex.py  test_workspace.py
tests/domain/: test_bidding.py  test_identity.py
tests/e2e/: conftest.py  test_import_workflow.py  test_orphan_lifecycle.py  test_snowballing_workflow.py  test_triage_workflow.py
tests/providers/: test_factory.py  test_openalex_provider.py
tests/storage/: test_bib.py  test_repo.py  test_tabular.py  test_yml.py
ui/: angular.json  package-lock.json  package.json  proxy.conf.js
ui/electron/: dev.js  main.js  preload.js
ui/src/: electron.d.ts  styles.scss
ui/src/app/: api.service.ts  app.config.ts  app.html  app.routes.ts  app.scss  app.spec.ts  app.ts  models.ts  (+3 more)
(+28 files in other folders)
