[project]
name = "snow"
version = "0.1.0"
description = "Local-first systematic literature review tool using the snowballing method"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bibtexparser>=1.4.4",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.28",
    "ruamel-yaml>=0.19.1",
    "scholarly>=1.7.11",
    "typer>=0.25.1",
    "uvicorn[standard]>=0.47.0",
]

[project.scripts]
snow = "snow.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["snow"]

[tool.pytest.ini_options]
addopts = "--pyspec"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-pyspec>=1.1.1",
    "ruff>=0.15.13",
]
